# cir2-algo-course

./: .gitmodules
TD&P1/: CMakeLists.txt  code .md  main.cpp
TD&P1/exo1/: code.md  main.cpp
TD&P1/exo2/: code.md  main.cpp
TD&P2/: CMakeLists.txt
TD&P2/exo1/: main.cpp
TD&P2/exo2/: CMakeLists.txt
TD&P3/: CMakeLists.txt  main.cpp
TD&P3/exo1/: main.cpp
TD&P4/: CMakeLists.txt  main.cpp
TD&P4/exo1/: CMakeLists.txt  code.md  main.cpp
TD&P4/exo2/: main.cpp
TD&P6/: CMakeLists.txt  main.cpp
